@@ -1,8 +1,15 @@
 2005-03-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
-	* ospf_vty.c (show_ip_ospf_interface_sub): Display interface MTU and
-	bandwidth; this is useful for debugging problems.  Also, the function
-	should be static.
+	* ospf_packet.c: (ospf_write_frags) Enhance error message to
+	  show MTU.  Also make function static.
+	  (ospf_write) Enhance error message to show interface name and MTU.
+	  Also make function static.
+
+2005-03-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* ospf_vty.c: (show_ip_ospf_interface_sub) Display interface MTU and
+	  bandwidth; this is useful for debugging problems.  Also, the function
+	  should be static.
 
 2005-03-27 Hasso Tepper <hasso at quagga.net>
 
